feat: update user information
